# Doc_qna_RAG

./: .gitignore  README.md  pyproject.toml
DOCUMENT Q&A SYSTEM/: langchain_doc_qna.ipynb
documentation/: RAG.txt  agentic rag.txt  chunking.txt  datatypes in genai.txt  llm ecosystem and limitations.txt  vector database and embeddings,txt
rag-docqa/DOCUMENT Q&A SYSTEM/: implementation pipeline.txt
scripts/: ingest.py
src/ragdoc/: api.py  chunker.py  config.py  loaders.py  store.py
